--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -79,7 +79,11 @@
   {% if site.gpodder_url %}
     <li>at <a href="{{ site.gpodder_url }}"><img src="https://gpodder.net/media/gpoddernet_64.png" height="16" /> Gpodder.net</a></li>
   {% endif %}
+    <li><a href="https://open.spotify.com/show/7w0HRJ6ZxN5J2IEoXOeLFq"><i class="fab fa-spotify"></i> Spotify</a></li>
+
+
 </ol>
+
 
 
 <h4>Credits</h4>
