--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -89,7 +89,15 @@
 <h4>Credits</h4>
 
 <ul>
-  <li>Music: <a href="http://www.bensound.com/royalty-free-music">Bensound</a></li>
+    <li><a href="https://open.spotify.com/show/7w0HRJ6ZxN5J2IEoXOeLFq"><i class="fab fa-spotify"></i> Spotify</a></li>
+    <li><a href="https://podcasts.apple.com/pt/podcast/coronav%C3%ADrus-covid-19-brasil-blog-e-podcast/id1504000394"><i class="fab fa-itunes"></i> iTunes</a></li></li>
+    <li><a href="https://www.youtube.com/channel/UCWJnAWmWeUonbpnzmhV_Aqw"><i class="fab fa-youtube"></i> Youtube</a></li></li>
+    <li><a href="https://castbox.fm/channel/Coronav%C3%ADrus-(Covid-19)-Brasil-Blog-e-Podcast-id2711402"><i class="fa fa-volume-up"></i> Castbox</a></li>
+    <li><a href="https://deezer.com/show/975732"><i class="fa fa-volume-up"></i> Deezer</a></li>
+    <li><a href="https://player.fm/series/coronavirus-covid-19-brasil-blog-e-podcast"><i class="fa fa-volume-up"></i> PlayerFM</a></li>
+    <li><a href="https://pca.st/777izfpu"><i class="fa fa-volume-up"></i> Pocket Casts</a></li>
+    <li><a href="https://www.stitcher.com/podcast/coronavirus-covid19-brasil-blog-e-podcast"><i class="fa fa-volume-up"></i> Stitcher</a></li>
+    <li><a href="http://tun.in/pjNmH"><i class="fa fa-volume-up"></i> TuneIn</a></li>
 </ul>
 
 <h4>License</h4>
